<resources>
    <string name="app_name">EasyPay</string>
    <string name="title_home">Pagamenti</string>
    <string name="title_dashboard">Movimenti</string>
    <string name="title_notifications">Profilo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="labelProfile">Il tuo profilo</string>
    <string name="profileName">Nome</string>
    <string name="profileCognome">Cognome</string>
    <string name="profileDatanascita">Data di nascita</string>
    <string name="profileCodicefiscale">Codice Fiscale</string>
    <string name="profileTelefono">Telefono</string>
    <string name="profileAddress">Indirizzo</string>
    <string name="profileEmail">Email</string>
    <string name="profileUsername">Username</string>
    <string name="profilePartitaIva">Partita Iva</string>
    <string name="profileRagioneSociale">Ragione Sociale</string>
    <string name="registrati">Non sei registrato? Registrati QUI</string>
    <string name="QRcode"> QR Code </string>
    <string name="FindMap"> MOSTRA MAPPA </string>
    <string name="FindMapLabel"> Trova i commercianti vicino a te! </string>
    <string name="isCliente">Cliente</string>
    <string name="isCommerciante">Commerciante</string>
    <string name="avanti">Avanti</string>
    <string name="registrazione">REGISTRATI</string>
    <string name="labelCredenziali">Credenziali di accesso</string>
    <string name="confermaPassword">Conferma Password</string>
    <string name="saldoconto">Saldo</string>
    <string name="budgetconto">Budget</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registratiUtente">Registrati</string>
    <string name="loginUtente">Login</string>
</resources>
