<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".RegistrationCommerciante">

    <Button
        android:id="@+id/registrazioneComm"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/rubik_light"
        android:text="@string/registrazione"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textColorHint="#D0D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

    <AutoCompleteTextView
        android:id="@+id/fieldRagioneSociale"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/profileRagioneSociale"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textColorHint="#D0D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textColorHint="#D0D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldTelefono2" />

    <AutoCompleteTextView
        android:id="@+id/fieldPartitaIva"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/profilePartitaIva"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textColorHint="#D0D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldRagioneSociale" />

    <EditText
        android:id="@+id/fieldTelefono2"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/profileTelefono"
        android:inputType="phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textColorHint="#D0D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPartitaIva" />
</androidx.constraintlayout.widget.ConstraintLayout>