<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_typeReg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".Registration">

    <Button
        android:id="@+id/reg_buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="@font/rubik_light"
        android:text="@string/avanti"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_isCommerciante"
        app:layout_constraintVertical_bias="0.269" />

    <CheckBox
        android:id="@+id/reg_isCommerciante"
        android:layout_width="193dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/isCommerciante"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_isCliente" />

    <CheckBox
        android:id="@+id/reg_isCliente"
        style="@android:style/Widget.CompoundButton.CheckBox"
        android:layout_width="196dp"
        android:layout_height="54dp"
        android:layout_marginTop="116dp"
        android:checked="false"
        android:clickable="true"
        android:fontFamily="@font/rubik_light"
        android:text="@string/isCliente"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>